--- a/app/src/main/res/layout/activity_popular_movies.xml
+++ b/app/src/main/res/layout/activity_popular_movies.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/primaryColorLight"
+        android:background="@color/primaryColor"
         android:padding="8dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,7 +21,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:contentDescription="@string/search_icon_desc"
-            android:src="@drawable/baseline_local_movies_24"
+            android:src="@mipmap/ic_launcher"
             android:layout_gravity="center_vertical"/>
 
 
@@ -102,7 +102,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:backgroundTint="@color/primaryColorLight"
+        android:backgroundTint="@color/primaryColor"
         android:text="@string/reload_button"
         android:visibility="invisible"/>
 
